feat(http): BrotliとZstandardの展開に対応